manifests/argocd/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server-grpc
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  annotations: {}
spec:
  parentRefs:
    - name: cilium-gateway-internal
      namespace: kube-system
      sectionName: https-argocd-home-lex-la
  hostnames:
    - argocd.home.lex.la
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
