manifests/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: {}
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
      sectionName: https-lex-la
  hostnames:
    - argocd.lex.la
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
